src/objects/TracHier__Rollup__c.object
<CustomObject>
    <fields>
        <fullName>TracHier__Bridge__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bridge</label>
        <referenceTo>TracHier__Bridge__c</referenceTo>
        <relationshipLabel>Rollups</relationshipLabel>
        <relationshipName>Rollups</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TracHier__Child_Field__c</fullName>
        <label>Child Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracHier__Parent_Field__c</fullName>
        <label>Parent Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracHier__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Rollup</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rollup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rollups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>